[workspace]
members = ["packages/main-ui", "packages/dto", "packages/main-api"]
resolver = "2"
exclude = ["deps"]

[workspace.package]
authors = ["Biyard"]
description = "DemocraSee"
edition = "2021"
repository = "https://github.com/biyard/democrasee"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
slog = "2.7.0"
by-axum = { path = "./deps/rust-sdk/packages/by-axum" }
by-macros = { path = "./deps/rust-sdk/packages/by-macros" }
by-types = { path = "./deps/rust-sdk/packages/by-types" }
rest-api = { path = "./deps/rust-sdk/packages/rest-api" }
easy-dynamodb = { version = "0.1.7" }
dto = { path = "./packages/dto" }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
dioxus = { version = "0.6.1" }
sqlx = { version = "0.8.3", features = ["sqlite", "postgres", "runtime-tokio", "time"] }
dioxus-translate = { path = "./deps/rust-sdk/packages/dioxus-translate", features = ["ko"] }
dioxus-oauth = { path = "./deps/rust-sdk/packages/dioxus-oauth", features = ["web"] }
google-wallet = { path = "./deps/rust-sdk/packages/google-wallet" }
dioxus-popup = { path = "./deps/rust-sdk/packages/dioxus-popup" }


[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
